# zenjxl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.crates.md  README.md  justfile
.github/workflows/: ci.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benchmarks/: INDEX.md  lz77_vs_rle_v07_2026-05-06.md  patches_per_class_v07_2026-05-06.md  per_class_encoder_rule_v07_v08_2026-05-06.md  picker-training-data-2026-05-04.pointer.md  picker_v0.4_holdout_ab_2026-05-04.md  picker_v0.4_holdout_ab_2026-05-04.tsv  picker_v0.4_summary_2026-05-04.md  picker_v0.5_holdout_ab_2026-05-04.md  picker_v0.5_holdout_ab_2026-05-04.tsv  picker_v0.5_holdout_ab_distance_2026-05-04.md  picker_v0.5_holdout_ab_distance_2026-05-04.tsv  picker_v0.5_summary_2026-05-04.md  sweep_validate_jxl_2026-06-10.tsv  sweep_validate_jxl_2026-06-12.tsv  zenjxl_arm_predictor_profile_2026-05-30.tsv  zenjxl_correlation_2026-05-02.json  zenjxl_correlation_thresh99_2026-05-02.json  zenjxl_features_multiaxis_only_2026-05-02.tsv  zenjxl_lossy_picker_v0.1_dense-r6-evenodd_2026-06-26.md  zenjxl_lossy_ssim2_picker_v0.1_cleansplit_2026-06-29.manifest.json  zenjxl_picker_v0.4_2026-05-04.manifest.json  zenjxl_picker_v0.5_2026-05-04.manifest.json
benchmarks/pickers/: README.md  zenjxl_lossless_cart_2026-06-28.rs  zenjxl_lossy_cart_ssim2_2026-06-28.rs  zenjxl_lossy_cart_zensim_2026-06-28.rs
benchmarks/proxy_policy_2026-07-12/: README.md  assemble_matrix.py  confirm_testexp.py  final_eval.py  gen_renditions.py  optimize_policy.py  summary.tsv  testexp_confirmation.tsv
docs/: VARIANT_GENERATION.md
docs/public-api/: ABLATION-zenjxl.md  zenjxl.features.txt  zenjxl.internal.txt  zenjxl.txt
examples/: mem_probe_encode.rs  proxy_policy_sweep.rs  sweep_validate.rs
extract_features_multiaxis/: Cargo.toml
extract_features_multiaxis/src/: main.rs
src/: alloc_util.rs  codec.rs  container.rs  decode.rs  encode.rs  error.rs  heuristics.rs  jpeg_lossy.rs  lib.rs  lossless_verify.rs  sweep.rs  validate.rs  zencodec.rs  zennode_defs.md  zennode_defs.rs  zenode_defs.rs
tests/: expert_forwarding.rs  gain_map_render.rs  jpeg_lossy.rs  jxl_hdr_fixtures.rs  lossless_verify.rs  oneshot.rs  orientation.rs  progressive_policy.rs  public_api_doc.rs  readme_examples.rs  resolve_plan.rs  truncation_series.rs  validate.rs
tests/fixtures/: hdr_hlg_1000.jxl  hdr_pq_4000.jxl
