[package]
name = "zenjxl"
version = "0.1.1"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "JPEG XL encoding and decoding with zencodec trait integration"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["jxl", "jpeg-xl", "image", "encoder", "decoder"]
repository = "https://github.com/imazen/zenjxl"
exclude = ["CLAUDE.md", "CONTEXT-HANDOFF.md", "FEEDBACK.md", ".claude/", ".superwork/", ".zenbench/", "copter-report/", ".github/", "Cross.toml", "justfile", "Cargo.toml.original.txt", "fuzz/"]

[dependencies]
thiserror = { version = "2.0.18", default-features = false }
whereat = { version = "0.1.5"}
rgb = { version = "0.8.53", default-features = false, features = ["as-bytes"] }
imgref = "1.12.0"
enough = "0.4.3"
zencodec = { version = "0.1.18" }
zenpixels = { version = "0.2.7", default-features = false, features = ["rgb"] }
linear-srgb = { version = "0.6.7"}
jxl = { version = "0.3.7", package = "zenjxl-decoder", optional = true }
jxl-encoder = { version = "0.2.0", optional = true, default-features = false, features = ["std", "convenience"] }
# zennode = { path = "../zennode/zennode", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
archmage = { version = "0.9.19", features = ["std"] }

[features]
default = ["encode", "decode"]
decode = ["dep:jxl"]
threads = ["decode", "jxl/threads"]
encode = ["dep:jxl-encoder"]
# Enable rayon-based per-frame parallelism inside the JXL encoder.
# Useful when a single encode call should saturate multiple cores
# (e.g. high-effort encodes); not needed when the caller already runs
# many encode tasks in parallel.
parallel = ["encode", "jxl-encoder/parallel"]
butteraugli-loop = ["encode", "jxl-encoder/butteraugli-loop"]
# Enable zencodec trait integration
zencodec = []
# Enable zennode node definitions (EncodeJxl, DecodeJxl)
# zennode = ["dep:zennode"]

