[package]
name = "zenjxl"
version = "0.2.1"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "JPEG XL encoding and decoding with zencodec trait integration"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["jxl", "jpeg-xl", "image", "encoder", "decoder"]
repository = "https://github.com/imazen/zenjxl"
include = [
    "/src/**",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE*",
]

[dependencies]
thiserror = { version = "2.0.18", default-features = false }
whereat = { version = "0.1.5"}
rgb = { version = "0.8.53", default-features = false, features = ["as-bytes"] }
imgref = "1.12.0"
enough = "0.4.3"
zencodec = { version = "0.1.21" }
zenpixels = { version = "0.2.11", default-features = false, features = ["rgb"] }
linear-srgb = { version = "0.6.7"}
jxl = { version = "0.3.7", package = "zenjxl-decoder", optional = true }
jxl-encoder = { version = "0.3.2", optional = true, default-features = false, features = ["std", "convenience"] }
# Source-quality detection (header-only) for the inferred-target floor predictor
# (jpeg-lossy feature). detect is ungated in zenjpeg; default-features = false
# keeps it light (no decoder pulled).
zenjpeg = { version = "0.8.7", optional = true, default-features = false }
# Gain-map application for GainMapRender::ReconstructHdr (reconstruct-hdr
# feature). Pure gain-map math; jhgm ISO 21496-1 parameter parsing comes
# from zencodec, so the registry release suffices.
ultrahdr-core = { version = "0.5.0", optional = true, default-features = false, features = ["std"] }
# zennode = { path = "../zennode/zennode", optional = true, default-features = false, features = ["derive"] }

# jxl-encoder 0.3.2 (lossy-JPEG recompression API) + zenjpeg 0.8.7 (libjxl-parity
# magetypes fix) are not yet on crates.io; path-patch to the local siblings, the
# same pattern jxl-encoder itself uses for its unpublished zenjpeg dep. Remove
# these once the chain is published (see docs/zenjxl_jpeg_lossy/README.md in the
# jxl-encoder repo). Builds require the sibling checkouts.
[patch.crates-io]
jxl-encoder = { path = "../jxl-encoder/jxl-encoder" }
zenjpeg = { path = "../zenjpeg/zenjpeg" }

[dev-dependencies]
archmage = { version = "0.9.19", features = ["std"] }
# Builds the jhgm gain-map fixture for tests/gain_map_render.rs
# (GainMapBundle + append_gain_map_bundle).
jxl-encoder = { version = "0.3.2", default-features = false, features = [
    "std",
    "convenience",
    "hdr-gainmap",
] }
# Synthesizes a real Display-P3 ICC for the jpeg-lossy color-preservation test
# (`tests/jpeg_lossy.rs`). Matches the moxcms the jpeg-lossy feature already
# pulls via zenjpeg, so no extra version in the graph.
moxcms = { version = "0.8.1" }
# Parses `cargo metadata` in tests/public_api_doc.rs (feature-list discovery).
serde_json = "1.0.150"
# SSIMULACRA2 scoring for the sweep-validation harness
# (examples/sweep_validate.rs).
fast-ssim2 = "0.8.2"
# Corpus loading (CID22-512) + synthetic generators for the same harness.
# Path-only dev-dep (publish = false upstream): stripped on `cargo publish`,
# so it only binds local builds — which already require the sibling checkouts
# via [patch.crates-io].
zenjpeg-bench-utils = { path = "../zenjpeg/zenjpeg-bench-utils", default-features = false }

[features]
default = ["encode", "decode"]
decode = ["dep:jxl"]
threads = ["decode", "jxl/threads"]
encode = ["dep:jxl-encoder"]
# Enable rayon-based per-frame parallelism inside the JXL encoder.
# Useful when a single encode call should saturate multiple cores
# (e.g. high-effort encodes); not needed when the caller already runs
# many encode tasks in parallel.
parallel = ["encode", "jxl-encoder/parallel"]
butteraugli-loop = ["encode", "jxl-encoder/butteraugli-loop"]
# Lossy JPEG -> JXL recompression to a quality target (PreserveJxl closed loop).
# Needs both encode (jxl-encoder's coefficient-domain coarsener, behind its
# `jpeg-reencoding` feature) AND decode (to score each candidate in-process).
# Metric-agnostic: the caller supplies a scorer callback over decoded RGB8.
# zenjpeg/decoder provides the source-ICC extractor (`extract_icc_profile`, a pure
# APP2 byte-scanner) so the Reencode path preserves a wide-gamut source's color
# profile instead of silently relabeling it sRGB. (No `zenjpeg/moxcms` needed — the
# extractor does no color management; its re-export was ungated in zenjpeg.)
jpeg-lossy = ["encode", "decode", "jxl-encoder/jpeg-reencoding", "dep:zenjpeg", "zenjpeg/decoder"]
# Expert / unstable: forwards jxl-encoder's `__expert` feature so picker
# training and codec calibration sweeps can apply
# `LossyConfig::with_effort_profile_override(EffortProfile)` /
# `LosslessConfig::with_effort_profile_override(EffortProfile)` through
# zenjxl's re-exports. Double-underscore prefix signals "private — do
# not depend on this in production code." Anything in the underlying
# escape hatch may change without semver bumps.
__expert = ["encode", "jxl-encoder/__expert"]
# Enable zencodec trait integration
zencodec = []
# Native HDR reconstruction for `GainMapRender::ReconstructHdr` (zencodec
# adapter): SDR-base jhgm bundles get the gain map applied via ultrahdr-core
# (linear f32/f16 output + CLL/MDCV envelope); HDR-base bundles return the
# base, which already carries its own HDR signaling. Flips
# `DecodeCapabilities::reconstructs_hdr()` to true. Without this feature,
# ReconstructHdr downgrades to surfacing Components per the zencodec contract.
reconstruct-hdr = ["zencodec", "decode", "dep:ultrahdr-core"]
# Enable zennode node definitions (EncodeJxl, DecodeJxl)
# zennode = ["dep:zennode"]

# Empirical validation of the curated sweep axes + fingerprint contract
# (see docs/VARIANT_GENERATION.md). Run:
#   GIT_COMMIT=$(git rev-parse --short HEAD) cargo run --release \
#     --example sweep_validate --features __expert -- \
#     --out benchmarks/sweep_validate_$(date +%F).tsv
[[example]]
name = "sweep_validate"
required-features = ["encode", "decode", "__expert"]
