[package]
name = "extract_features_multiaxis"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# `api` enables zenanalyze's zenanalyze-api feature contract — the extractor emits
# qualified `name@hex8` column headers via versioning::feature_qualified_names().
zenanalyze = { path = "/home/lilith/work/zen/zenanalyze", features = ["experimental", "hdr", "api"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = 3
lto = "thin"
